Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -51,6 +51,7 @@
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi (Lá também vende lasanhas deliciosas!)</a></li>
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana (Somente por encomenda!)</a></li>   
+                <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
             </ul>    
         </div>
         <div class="lojas">
