Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -65,15 +65,15 @@
         </div>
         <div class="lojas">
             <h2>Jantar em 6 Tempos</h2>
-            <p>Caso você queira um jantar diferente e especial o <a href="https://instagram.com/restauranteonlineoficial?igshid=MzRlODBiNWFlZA==">Restaurante On-line</a>, do <a href="https://instagram.com/cheffredericojayme?igshid=MzRlODBiNWFlZA==">Chef Frederico Jayme</a> adapta o cardápio vegetariano para os veganos. É uma proposta bem interessante, a cada semana o cardápio muda, sempre inspirado em algum local do mundo. A refeição é composta por 6 mini porções. A comida é muito gostosa e elaborada, vale a pena conferir!</p>
+            <p>Caso você queira um jantar diferente e especial o <a href="https://instagram.com/restauranteonlineoficial?igshid=MzRlODBiNWFlZA==" target="_blank">Restaurante On-line</a>, do <a href="https://instagram.com/cheffredericojayme?igshid=MzRlODBiNWFlZA==" target="_blank">Chef Frederico Jayme</a> adapta o cardápio vegetariano para os veganos. É uma proposta bem interessante, a cada semana o cardápio muda, sempre inspirado em algum local do mundo. A refeição é composta por 6 mini porções. A comida é muito gostosa e elaborada, vale a pena conferir!</p>
         </div>
         <div class="lojas">
             <h2>Quero veganizar, mas o que eu vou passar no pão??</h2>
             <p>Essa é uma dificuldade que ocorre com algumas pessoas que se tornam veganas e que estão acostumadas a ingerir manteiga e outros latícinios. Vou dar algumas dicas que me ajudam e que eu uso bastante em casa.</p>
             <p>Uma boa pedida é fazer o pão no forno só com azeite mesmo. Também gosto de incrementar com ervas finas ou outras ervas, que são encontradas para vender facilmente em qualquer supermercado.</p>
-            <p>Nos supermercados também encontramos certa variedade de homus, pastas, patês e antepastos sem ingredientes de origem animal. Recomendo os antepastos e geleias da <a href="https://instagram.com/lila.natural?igshid=MzRlODBiNWFlZA==">Lila</a>.</p>
-            <p>Algumas manteigas boas e acessíveis são a da <a href="https://instagram.com/jayna_depalma?igshid=MzRlODBiNWFlZA==">Jayna</a>, que sempre encontro no supermercado Pinheiro e a QualiCoco, que vejo em quase todos os supermercados. Gosto muito da consistência da da Jayna.</p>
-            <p>Outra coisa que eu adoro é o cheddar vegano da marca Junior. Encontro para vender na <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA==">The Veggies On The Table</a>.</p>
+            <p>Nos supermercados também encontramos certa variedade de homus, pastas, patês e antepastos sem ingredientes de origem animal. Recomendo os antepastos e geleias da <a href="https://instagram.com/lila.natural?igshid=MzRlODBiNWFlZA==" target="_blank">Lila</a>.</p>
+            <p>Algumas manteigas boas e acessíveis são a da <a href="https://instagram.com/jayna_depalma?igshid=MzRlODBiNWFlZA==" target="_blank">Jayna</a>, que sempre encontro no supermercado Pinheiro e a QualiCoco, que vejo em quase todos os supermercados. Gosto muito da consistência da da Jayna.</p>
+            <p>Outra coisa que eu adoro é o cheddar vegano da marca Junior. Encontro para vender na <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA==" target="_blank">The Veggies On The Table</a>.</p>
         </div>
     </main>
     
