Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -75,6 +75,23 @@
             <p>Algumas manteigas boas e acessíveis são a da <a href="https://instagram.com/jayna_depalma?igshid=MzRlODBiNWFlZA==" target="_blank">Jayna</a>, que sempre encontro no supermercado Pinheiro e a QualiCoco, que vejo em quase todos os supermercados. Gosto muito da consistência da da Jayna.</p>
             <p>Outra coisa que eu adoro é o cheddar vegano da marca Junior. Encontro para vender na <a href="https://instagram.com/theveggiesonthetable?igshid=MzRlODBiNWFlZA==" target="_blank">The Veggies On The Table</a>.</p>
         </div>
+        <div class="lojas">
+            <h2>Receitinha rápida e prática para subistituir o pão</h2>
+            <h3>Tapioca de Cuscuz</h3>
+            <h4>Ingredientes:</h4>
+            <ul>
+                <li>1 xícara (chá) de farinha de milho flocada</li>
+                <li>1/2 xícara (chá) de água</li>
+                <li>1 xícara (chá) de goma de tapioca</li>
+                <li>Sal, pimenta do reino e ervas secas a gosto</li>
+            </ul>
+            <h4>Preparo:</h4>
+            <p>Misture a farinha de milho flocada com o sal e a água e deixe hidratando por 10 minutos.</p>
+            <p>Adicione a goma de tapioca e os temperos e misture bem.</p>
+            <p>Unte uma frigideira com  azeite e disponha a massa. Deixe durante 4 minutos de cada lado.</p> <br>
+            <h4>Dicas:</h4>
+            <p>Eu gosto de comer com legumes assados com azeite no forno e também com molho de tomate</p>
+        </div>
     </main>
     
     <script>
