Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -85,13 +85,38 @@
                 <li>1 xícara (chá) de goma de tapioca</li>
                 <li>Sal, pimenta do reino e ervas secas a gosto</li>
             </ul>
+            <br>
             <h4>Preparo:</h4>
             <p>Misture a farinha de milho flocada com o sal e a água e deixe hidratando por 10 minutos.</p>
             <p>Adicione a goma de tapioca e os temperos e misture bem.</p>
-            <p>Unte uma frigideira com  azeite e disponha a massa. Deixe durante 4 minutos de cada lado.</p> <br>
+            <p>Unte uma frigideira com  azeite e disponha a massa. Deixe durante 4 minutos de cada lado.</p> 
+            <br>
             <h4>Dicas:</h4>
-            <p>Eu gosto de comer com legumes assados com azeite no forno e também com molho de tomate</p>
+            <p>Eu gosto de comer com legumes assados com azeite no forno (receita abaixo) e também com molho de tomate, azeitonas, alcaparras e queijo vegetal (tipo uma pizza).</p>
+            <p>Também gosto de fazer ela bem crocante e comer com manteiga vegetal. Fica muito gostoso!</p>
         </div>
+    </div>
+    <div class="lojas">
+        <h2>Receita de Legumes ao forno com azeite</h2>
+        <h4>Ingredientes:</h4>
+        <ul>
+            <li>1 cebola picada</li>
+            <li>10 dentes de alho inteiros</li>
+            <li>1 abobrinha picada</li>
+            <li>1 berinjela picada</li>
+            <li>1 abobrinha picada</li>
+            <li>1 pimentão vermelho em tirinhas</li>
+            <li>4 tomates cortados em pedaços grandes</li>
+            <li>Pimentas picadas a gosto</li>
+            <li>Azeitonas</li>
+            <li>Alcaparras</li>
+            <li>Sal, pimenta do reino, noz-moscada, óregano e manjericão</li>
+            <li>Azeite</li>
+        </ul>
+        <br>
+        <h4>Preparo:</h4>
+        <p>Coloque todos os ingredientes em uma assadeira, regue com bastante azeite, cubra com papel alumínio e leve ao forno médio por 40 minutos.</p>
+    </div>
     </main>
     
     <script>
