--- a/onde-comer.html
+++ b/onde-comer.html
@@ -85,6 +85,15 @@
                 <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li>   
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Acarajé!</h2>
+            <ul>
+                <li><a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==">Malaguetta</a></li>
+                <li><a href="https://instagram.com/acarajedamanu?igshid=MzRlODBiNWFlZA==">Acarajé da Manu</a></li>
+                <li><a href="https://instagram.com/acaraje_e_cia?igshid=MzRlODBiNWFlZA==">Acarajé & Cia</a></li>   
+                <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a></li>
+            </ul>
+        </div>
     </main>
     
     <script>
