Atualizei confeitarias.html

--- a/confeitarias.html
+++ b/confeitarias.html
@@ -52,6 +52,12 @@
             <p>Quinzenalmente na <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank"> Feira Agroecológica do Benfica</a> </p>
             <p>Clique <a href="https://instagram.com/sabor_alt?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Jambalera</h3>
+            <p>Confeitaria inclusiva à base de plantas. Opções sem glúten.</p>
+            <p>Sob encomenda.</p>
+            <p>Clique <a href="https://instagram.com/jambalera?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
