Atualizei confeitarias.html

--- a/confeitarias.html
+++ b/confeitarias.html
@@ -58,6 +58,12 @@
             <p>Sob encomenda.</p>
             <p>Clique <a href="https://instagram.com/jambalera?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Veganale</h3>
+            <p>Bolos confeitados, docinhos e salgadinhos. Opções sem glúten.</p>
+            <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
+            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
