--- a/festas.html
+++ b/festas.html
@@ -73,6 +73,12 @@
             <p>Tortas, pãezinhos e patês, sob encomenda, para confraternizações.</p>
             <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Veganale</h3>
+            <p>Bolos confeitados, docinhos e salgadinhos. Opções sem glúten.</p>
+            <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
+            <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
 
     </main>
     
