Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -41,7 +41,7 @@
     <main>
         <p>Seja direcionado ao Instagram, ao clicar em cima dos nomes dos estabelecimentos.</p>
         <div class="lojas">
-            <h2>Orgânicos</h2>
+            <h2>Orgânicos e Agroecologia</h2>
             <ul>
                 <li><a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Agroecológica do Benfica</a></li>
                 <li><a href="https://instagram.com/feiracaroa?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Caroá</a></li>
@@ -53,6 +53,7 @@
                 <li><a href="https://instagram.com/nagauraorganicos?igshid=YmMyMTA2M2Y=" target="_blank">Nagaura Orgânicos</a></li>
                 <li><a href="https://instagram.com/sitiotanques?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Tanques</a></li>
                 <li><a href="https://instagram.com/sitio_pachamama?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Pachamama</a></li>
+                <li><a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==" target="_blank">Fundação Cepema</a></li>
                 <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
             </ul>
         </div>
