Atualizei cafes.html

--- a/cafes.html
+++ b/cafes.html
@@ -40,16 +40,16 @@
     <main>
         <p>Algumas sugestões de cafeterias com opções vegetarianas.</p>
         <div class="lojas">
+            <h3>Pâine</h3>
+            <p>Na loja da Varjota tem um ótimo cardápio com opções  veganas salgadas e há a opção de substituição do leite das bebidas por leite vegetal. Tudo muito bom!</p>
+            <p>Rua Castro Monte, 899, Varjota - Fortaleza.</p>
+            <p>Clique <a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Nüsse Café</h3>
             <p>Cappuccinos e outros drinks quentes ou gelados, com leite vegetal. Também tem opções de pratos salgados sem ingredientes de origem animal.</p>
             <p>Endereço: Shopping Iguatemi e Shopping Aldeota Open Mall.</p>
             <p>Clique <a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </div>
-        <div class="lojas">
-            <h3>Pâine</h3>
-            <p>Na loja da Varjota tem um bom cardápio com opções salgadas, mas infelizmente não oferece cafés e drinks com alternativa de leite vegetal.</p>
-            <p>Rua Castro Monte, 899, Varjota - Fortaleza.</p>
-            <p>Clique <a href="https://instagram.com/paineartesanal?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Oie Cafeteria</h3>
