--- a/dicas.html
+++ b/dicas.html
@@ -44,6 +44,7 @@
             <h2>Orgânicos e Agroecologia</h2>
             <ul>
                 <li><a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Agroecológica do Benfica</a></li>
+                <li><a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==" target="_blank">Fundação Cepema</a></li>
                 <li><a href="https://instagram.com/feiracaroa?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Caroá</a></li>
                 <li><a href="https://instagram.com/mudameumundo?igshid=YmMyMTA2M2Y=" target="_blank">Muda Meu Mundo</a></li>
                 <li><a href="https://instagram.com/portaldoorganico?igshid=YmMyMTA2M2Y=" target="_blank">Portal do Orgânico</a></li>
@@ -53,7 +54,6 @@
                 <li><a href="https://instagram.com/nagauraorganicos?igshid=YmMyMTA2M2Y=" target="_blank">Nagaura Orgânicos</a></li>
                 <li><a href="https://instagram.com/sitiotanques?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Tanques</a></li>
                 <li><a href="https://instagram.com/sitio_pachamama?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Pachamama</a></li>
-                <li><a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==" target="_blank">Fundação Cepema</a></li>
                 <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
             </ul>
         </div>
@@ -63,6 +63,12 @@
                 <li><a href="https://instagram.com/atmakombucha?igshid=MzRlODBiNWFlZA==" target="_blank">Atma Kombucha</a></li>
                 <li><a href="https://instagram.com/hugotheophilo?igshid=MzRlODBiNWFlZA==" target="_blank">Hugo Teophilo</a></li>  
             </ul>
+        </div>
+        <div class="lojas">
+            <h2>Feirinhas Agroecológicas com Opções de Lanches Veganos</h2>
+            <p>Duas ótimas opções de passeio aos sábados pela manhã são as feiras agroecológicas Benfica e Fundação Cepema. A do <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==">Benfica</a> ocorre quinzenalmente na praça da Gentilândia e a da <a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==">Fundação Cepema</a> ocorre todo sábado no Parque Adahil Barreto.</p>
+            <p>Além de uma grande variedade de produtos orgânicos, nessas feirinhas também encontramos opções de lanches sem ingredientes de origem animal.</p>
+            <p>Muito bom!</p>
         </div>
         <div class="lojas">
             <h2>Jantar em 6 Tempos</h2>
