Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -44,6 +44,7 @@
             <h2>Orgânicos e Agroecologia</h2>
             <ul>
                 <li><a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Agroecológica do Benfica</a></li>
+                <li><a href="https://instagram.com/redeecoceara?igshid=MzRlODBiNWFlZA==" target="_blank">Rede EcoCeará</a></li>
                 <li><a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==" target="_blank">Fundação Cepema</a></li>
                 <li><a href="https://instagram.com/feiracaroa?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Caroá</a></li>
                 <li><a href="https://instagram.com/mudameumundo?igshid=YmMyMTA2M2Y=" target="_blank">Muda Meu Mundo</a></li>
@@ -66,8 +67,8 @@
         </div>
         <div class="lojas">
             <h2>Feirinhas Agroecológicas com Opções de Lanches Veganos</h2>
-            <p>Duas ótimas opções de passeio aos sábados pela manhã são as feiras agroecológicas Benfica e Fundação Cepema. A do <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==">Benfica</a> ocorre quinzenalmente na praça da Gentilândia e a da <a href="https://instagram.com/cepemafundacao?igshid=MzRlODBiNWFlZA==">Fundação Cepema</a> ocorre todo sábado no Parque Adahil Barreto.</p>
-            <p>Além de uma grande variedade de produtos orgânicos, nessas feirinhas também encontramos opções de lanches sem ingredientes de origem animal.</p>
+            <p>Duas ótimas opções de passeio aos sábados pela manhã são as feiras agroecológicas Benfica e Fundação Cepema. A do <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==">Benfica</a> ocorre quinzenalmente na praça da Gentilândia e a da <a href="https://instagram.com/redeecoceara?igshid=MzRlODBiNWFlZA==">Rede EcoCeará</a> ocorre todo sábado no Parque Adahil Barreto.</p>
+            <p>Além de uma grande variedade de produtos orgânicos, nessas feirinhas também encontramos várias opções de lanches sem ingredientes de origem animal.</p>
             <p>Muito bom!</p>
         </div>
         <div class="lojas">
