Atualizei confeitarias.html

--- a/confeitarias.html
+++ b/confeitarias.html
@@ -64,6 +64,10 @@
             <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
             <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Madeleine Confeitaria</h3>
+            <p>Clique <a href="https://instagram.com/madeleineconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
