Atualizei restaurantes.html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -104,6 +104,21 @@
             <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Cozinha Alternativa</h3>
+            <p>Refeições sob encomenda.</p>
+            <p>Clique <a href="https://instagram.com/amocozinhaalternativa?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Broto de Beterraba</h3>
+            <p>Kits semanais de refeições vegetarianas.</p>
+            <p>Clique <a href="https://instagram.com/brotodebeterraba?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>The Veggie</h3>
+            <p>Pedidos pelo iFood.</p>
+            <p>Clique <a href="https://instagram.com/theveggiefor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
