--- a/festas.html
+++ b/festas.html
@@ -79,6 +79,11 @@
             <p>Sob encomenda. Fica localizada em Maracanaú - CE</p>
             <p>Clique <a href="https://instagram.com/vegan.ale?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>naVE GAN</h3>
+            <p>Salgadinhos.</p>
+            <p>Clique <a href="https://instagram.com/na.nave_gan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
 
     </main>
     
