Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -66,6 +66,11 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Farmácia</h2>
+            <p>Farmácia de manipulação 100% vegana.</p>
+            <p>Clique <a href="https://instagram.com/veganpharma?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h2>Feirinhas Agroecológicas com Opções de Lanches Veganos</h2>
             <p>Duas ótimas opções de passeio aos sábados pela manhã são as feiras agroecológicas Benfica e Fundação Cepema. A do <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==">Benfica</a> ocorre quinzenalmente na praça da Gentilândia e a da <a href="https://instagram.com/redeecoceara?igshid=MzRlODBiNWFlZA==">Rede EcoCeará</a> ocorre todo sábado no Parque Adahil Barreto.</p>
             <p>Além de uma grande variedade de produtos orgânicos, nessas feirinhas também encontramos várias opções de lanches sem ingredientes de origem animal.</p>
