Atualizei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -54,6 +54,11 @@
             <p>Endereço: Rua Cláudio Manuel Dias Leite, 66 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/florabamboo?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Brio Veg</h3>
+            <p>Cosméticos artesanais, veganos e naturais.</p>
+            <p>Clique <a href="https://instagram.com/brio.veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
