Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -67,6 +67,7 @@
         </div>
         <div class="lojas">
             <h2>Farmácia</h2>
+            <h4>Vegan Pharma</h4>
             <p>Farmácia de manipulação 100% vegana.</p>
             <p>Clique <a href="https://instagram.com/veganpharma?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
