--- a/cafes.html
+++ b/cafes.html
@@ -75,6 +75,18 @@
             <p>Endereço: Rua Maria Tomásia, 1276 - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Mundo Zero</h3>
+            <p>Bolos, doces, chocolates e biscoitos.</p>
+            <p>Endereço: Shopping RioMar Papicu.</p>
+            <p>Clique <a href="https://instagram.com/seumundozero?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>B.lem Padaria</h3>
+            <p>Pastelzinho de nata vegano. Muito bom acompanhado de um café!</p>
+            <p>Endereço: Shopping Iguatemi e Shopping RioMar Papicu.</p>
+            <p>Clique <a href="https://instagram.com/blempadaria.iguatemifortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
