Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -58,7 +58,8 @@
             <h2>Sushi!</h2>
             <ul>
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li>
-                <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li>  
+                <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li> 
+                <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li> 
             </ul>
         </div>
         <div class="lojas">
@@ -92,6 +93,17 @@
                 <li><a href="https://instagram.com/acarajedamanu?igshid=MzRlODBiNWFlZA==">Acarajé da Manu</a></li>
                 <li><a href="https://instagram.com/acaraje_e_cia?igshid=MzRlODBiNWFlZA==">Acarajé & Cia</a></li>   
                 <li><a href="https://instagram.com/acaraje_da_adriana?igshid=MzRlODBiNWFlZA==" target="_blank">Acarajé da Adriana</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Hambueguer!</h2>
+            <ul>
+                <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==">Bike Vegan</a></li>
+                <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
+                <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
+                <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>
+                <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
+                <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
         </div>
     </main>
