Alterei nome de página

--- a/canais.html
+++ b/canais.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O que comer?</title>
+    <title>Canais Veganos</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
@@ -31,15 +31,15 @@
                 <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="festas.html">Festas</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
-                <li><a href="o-que-comer.html">O que comer?</a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
+                <li><a href="canais.html">Canais</a></li>
             </ul>
         </menu>
     </header>
     
     <main>
-        <p>Nessa sessão vou indicar opções vegetarianas em alguns shoppings da cidade. Lembrem que é importante valorizar empresas que não vivem substancialmente da exploração animal.</p>
+        <p>Dicas de alguns canais de receitas veganas no YouTube.</p>
         <div class="lojas">
             <h2>No Shopping Iguatemi</h2>
             <ul>
