Atualizei canais.html

--- a/canais.html
+++ b/canais.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>O que comer?</h1>
+        <h1>Canais de Receitas Veganas no YouTube</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
@@ -33,7 +33,7 @@
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
-                <li><a href="canais.html">Canais</a></li>
+                <li><a href="canais.html">Canais YouTube</a></li>
             </ul>
         </menu>
     </header>
@@ -41,30 +41,18 @@
     <main>
         <p>Dicas de alguns canais de receitas veganas no YouTube.</p>
         <div class="lojas">
-            <h2>No Shopping Iguatemi</h2>
             <ul>
-                <li>Nüsse Café: opções de drinks de café com leite vegetal, pratos salgados e sobremesas.</li>
-                <li>Vignoli: tem a opção de montar sua massa ou risoto. Gosto de montar um risoto com alho, tomate, abobrinha e azeitona, no molho pomodoro. Tem que lembrar de pedir sem o parmesão.</li>
-                <p>Mundo Zero: Bolos, chocolates e biscoitos.</p>
-                <p>Cookie Mania: tem uma opção de cookie vegano.</p>
-                <p>B.lem Padaria Portuguesa: tem pastel de nata vegano, delicioso. Também tem pães veganos.</p>
-                <li>Spoleto: opções de montar massa vegana e opção vegana já montada no cardápio.</li>
-                <li>Mex Burritos: tem opções de tacos e burritos vegetarianos. Se pedir para tirar o queijo ficam veganos.</li>
-                <li>Mini Kalzone: tem opção vegana.</li>
-                <li>Bellucci: opções de sorvetes veganos.</li>
-                <li>Bacio di Latte: opções de sorvetes veganos.</li>
-            </ul>
-        </div>
-        <div class="lojas">
-            <h2>No Shopping RioMar</h2>
-            <ul>
-                <li>Morosi Pizza & Forno: opções de lasanhas e pizzas.</li>
-                <li>Vignoli: tem a opção de montar sua massa ou risoto. Gosto de montar um risoto com alho, tomate, abobrinha e azeitona, no molho pomodoro. Tem que lembrar de pedir sem o parmesão.</li>
-                <p>Mundo Zero: Bolos, chocolates e biscoitos.</p>
-                <p>B.lem Padaria Portuguesa: tem pastel de nata vegano, delicioso. Também tem pães veganos.</p>
-                <li>Mini Kalzone: tem opção vegana.</li>
-                <li>Bellucci: opções de sorvetes veganos.</li>
-                <li>Bacio di Latte: opções de sorvetes veganos.</li>
+                <li><a href="https://www.youtube.com/@LaricaVegana" target="_blank">Larica Vegana</a></li>
+                <li><a href="https://www.youtube.com/@pensandoaocontrario" target="_blank">Pensando ao Contrário</a></li>
+                <li><a href="https://www.youtube.com/@PresuntovegetarianoBr" target="_blank">Presunto Vegetariano</a></li>
+                <li><a href="https://www.youtube.com/@DricanaCozinha" target="_blank">Drica na Cozinha</a></li>
+                <li><a href="https://www.youtube.com/@Mussinha" target="_blank">Mussinha</a></li>
+                <li><a href="https://www.youtube.com/@VeganBlackMetalChef" target="_blank">Vegan Black Metal Chef</a></li>
+                <li><a href="https://www.youtube.com/@vegtube/about" target="_blank">Veg Tube</a></li>
+                <li><a href="https://www.youtube.com/@TNMVEGG" target="_blank">Tá na Mesa Vegg</a></li>
+                <li><a href="https://www.youtube.com/@VIEWGANAS" target="_blank">Viewganas</a></li>
+                <li><a href="https://www.youtube.com/@vegetarirango" target="_blank">VegetariRango</a></li>
+                
             </ul>
         </div>
     </main>
