--- a/cafes.html
+++ b/cafes.html
@@ -31,9 +31,9 @@
                 <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="festas.html">Festas</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
-                <li><a href="o-que-comer.html">O que comer?</a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
+                <li><a href="canais.html">Canais YouTube</a></li>
         </menu>
     </header>
     
