--- a/onde-comer.html
+++ b/onde-comer.html
@@ -49,7 +49,7 @@
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
-                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a> (Lá também vende lasanhas deliciosas!)</li>
+                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a></li>
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana</a> (Somente por encomenda!)</li>   
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
             </ul>    
@@ -68,6 +68,14 @@
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">Café Cultive</a></li>
                 <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>   
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Lasanha!</h2>
+            <ul>
+                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
+                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a></li>
+                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>   
             </ul>
         </div>
         <div class="lojas">
