Atualizei canais.html

--- a/canais.html
+++ b/canais.html
@@ -46,11 +46,13 @@
                 <li><a href="https://www.youtube.com/@pensandoaocontrario" target="_blank">Pensando ao Contrário</a></li>
                 <li><a href="https://www.youtube.com/@PresuntovegetarianoBr" target="_blank">Presunto Vegetariano</a></li>
                 <li><a href="https://www.youtube.com/@DricanaCozinha" target="_blank">Drica na Cozinha</a></li>
-                <li><a href="https://www.youtube.com/@Mussinha" target="_blank">Mussinha</a></li>
-                <li><a href="https://www.youtube.com/@VeganBlackMetalChef" target="_blank">Vegan Black Metal Chef</a></li>
+                <li><a href="https://www.youtube.com/@Mussinha" target="_blank">Mussinha</a></li> 
                 <li><a href="https://www.youtube.com/@vegtube/about" target="_blank">Veg Tube</a></li>
                 <li><a href="https://www.youtube.com/@TNMVEGG" target="_blank">Tá na Mesa Vegg</a></li>
+                <li><a href="https://www.youtube.com/@RoleDeVegano" target="_blank">Rolê de Vegano</a></li>
+                <li><a href="https://www.youtube.com/@vegcomcarinho" target="_blank">Veg Com Carinho</a></li>
                 <li><a href="https://www.youtube.com/@VIEWGANAS" target="_blank">Viewganas</a></li>
+                <li><a href="https://www.youtube.com/@VeganBlackMetalChef" target="_blank">Vegan Black Metal Chef</a></li>
                 <li><a href="https://www.youtube.com/@vegetarirango" target="_blank">VegetariRango</a></li>
                 
             </ul>
