Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -115,6 +115,13 @@
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Self Service!</h2>
+            <ul>
+                <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
+                <li><a href="https://instagram.com/amelieresto?igshid=MzRlODBiNWFlZA==" target="_blank">Amelie Restô</a></li>   
+            </ul>
+        </div>
     </main>
     
     <script>
