Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -39,7 +39,8 @@
     </header>
     
     <main>
-        <p>Seja direcionado ao Instagram, ao clicar em cima dos nomes dos estabelecimentos.</p>
+        <p>Nessa sessão listei, por categoria de comida, alguns estabelecimentos veganos e não veganos, que oferecem opções vegetarianas no cardápio.</p>
+        <p>Seja direcionado ao Instagram da loja, ao clicar em cima do nome do estabelecimento.</p>
         <div class="lojas">
             <h2>Pizza!</h2>
             <ul>
