Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -110,9 +110,22 @@
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
+                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
                 <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>
                 <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
+                <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Hamburguer!</h2>
+            <ul>
+                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
+                <li><a href="https://instagram.com/obardaarvore?igshid=MzRlODBiNWFlZA==">O Bar da Árvore</a></li>
+                <li><a href="https://instagram.com/aquitanda_ce?igshid=MzRlODBiNWFlZA==">A Quitanda</a></li>
+                <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
+                <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>
+                <li><a href="https://instagram.com/casapatua?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Patuá</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a></li>
             </ul>
         </div>
