Corrigi onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -118,7 +118,7 @@
             </ul>
         </div>
         <div class="lojas">
-            <h2>Hamburguer!</h2>
+            <h2>Petiscos!</h2>
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/obardaarvore?igshid=MzRlODBiNWFlZA==">O Bar da Árvore</a></li>
