Alterei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -121,7 +121,7 @@
             <h2>Petiscos!</h2>
             <ul>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
-                <li><a href="https://instagram.com/obardaarvore?igshid=MzRlODBiNWFlZA==">O Bar da Árvore</a></li>
+                <li><a href="https://instagram.com/cravoecanelagastrobar?igshid=MzRlODBiNWFlZA==">Cravo & Canela Gastrobar</a></li>
                 <li><a href="https://instagram.com/aquitanda_ce?igshid=MzRlODBiNWFlZA==">A Quitanda</a></li>
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a></li>   
                 <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>
