Atualizei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -59,6 +59,11 @@
             <p>Cosméticos artesanais, veganos e naturais.</p>
             <p>Clique <a href="https://instagram.com/brio.veg?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Zero Waste</h3>
+            <p>Endereço: Av. 13 de Maio, 2344.</p>
+            <p>Clique <a href="https://instagram.com/zerowastece?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
