--- a/dicas.html
+++ b/dicas.html
@@ -130,6 +130,9 @@
         <br>
         <h4>Preparo:</h4>
         <p>Coloque todos os ingredientes em uma assadeira, regue com bastante azeite, cubra com papel alumínio e leve ao forno médio por 40 minutos.</p>
+        <h4>Dicas:</h4>
+        <p>Eu gosto de usar para fazer bruschetta.</p>
+        <p>Também gosto de misturar com molho de tomate, milho e ervilha e transformar num molho para macarronada. </p>
     </div>
     </main>
     
