Atualizei index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
             <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
             Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos mantemos coerentes.</p>
-            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções de comidas gostosas na cidade de Fortaleza.</p><br>
+            <p>Aqui, vou indicar estabelecimentos veganos e lugares que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções de comidas gostosas na cidade de Fortaleza.</p><br>
             <p style="text-align: center;">Se alimente conscientemente!</p>
         </section>
     </main>
