Atualizei confeitarias.html

--- a/confeitarias.html
+++ b/confeitarias.html
@@ -68,6 +68,10 @@
             <h3>Madeleine Confeitaria</h3>
             <p>Clique <a href="https://instagram.com/madeleineconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Do Futuro Confeitaria</h3>
+            <p>Clique <a href="https://instagram.com/dofuturoconfeitaria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
