Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -59,6 +59,13 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Antepastos e Geleias</h2>
+            <ul>
+                <li><a href="https://instagram.com/lila.natural?igshid=MzRlODBiNWFlZA==" target="_blank">Lila</a></li>
+                <li><a href="https://instagram.com/naturalizafoods?igshid=MzRlODBiNWFlZA==" target="_blank">Naturaliza</a></li>  
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Kombuchas</h2>
             <ul>
                 <li><a href="https://instagram.com/atmakombucha?igshid=MzRlODBiNWFlZA==" target="_blank">Atma Kombucha</a></li>
