--- a/cafes.html
+++ b/cafes.html
@@ -76,6 +76,12 @@
             <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Dorear Cacau/h3>
+            <p>Opções de salgados, doces e bebidas.</p>
+            <p>Endereço: Av. Washington Soares, 3000 - Shopping Reserva.</p>
+            <p>Clique <a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Mundo Zero</h3>
             <p>Bolos, doces, chocolates e biscoitos.</p>
             <p>Endereço: Shopping RioMar Papicu.</p>
