--- a/restaurantes.html
+++ b/restaurantes.html
@@ -105,6 +105,12 @@
             <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Quintal de Comida</h3>
+            <p>Restaurante vegano e ovolacto-vegetariano. Funcionamento presencial de quinta a sábado, das 16:00 às 22:00. .</p>
+            <p>Endereço: Rua Miguel Gonçalves, 195, Montese - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/quintaldecomida?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>Cozinha Alternativa</h3>
             <p>Refeições sob encomenda.</p>
             <p>Clique <a href="https://instagram.com/amocozinhaalternativa?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
