Atualizei cafes.html

--- a/cafes.html
+++ b/cafes.html
@@ -76,7 +76,7 @@
             <p>Clique <a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
-            <h3>Dorear Cacau/h3>
+            <h3>Dorear Cacau</h3>
             <p>Opções de salgados, doces e bebidas.</p>
             <p>Endereço: Av. Washington Soares, 3000 - Shopping Reserva.</p>
             <p>Clique <a href="https://instagram.com/dorearcacau?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
