Atualizei dicas.html

--- a/dicas.html
+++ b/dicas.html
@@ -73,6 +73,14 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Nutricionistas</h2>
+            <ul>
+                <li><a href="https://instagram.com/nutribrunoandrade?igshid=MzRlODBiNWFlZA==" target="_blank">Bruno Andrade</a></li>
+                <li><a href="https://instagram.com/lauranutrivegana?igshid=MzRlODBiNWFlZA==" target="_blank">Laura Braga</a></li>  
+                <li><a href="https://instagram.com/nutricionista_vegana?igshid=MzRlODBiNWFlZA==" target="_blank">Sara Ortins</a></li>  
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Farmácia</h2>
             <h4>Vegan Pharma</h4>
             <p>Farmácia de manipulação 100% vegana.</p>
