Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -81,6 +81,14 @@
             </ul>
         </div>
         <div class="lojas">
+            <h2>Massas!</h2>
+            <ul>
+                <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Beá</a></li>
+                <li><a href="https://instagram.com/cozinhamamma_lu?igshid=MzRlODBiNWFlZA==" target="_blank">Cozinha da Mamma Lu</a></li>
+                <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA==" target="_blank">Pastifício Grigoline</a></li>   
+            </ul>
+        </div>
+        <div class="lojas">
             <h2>Pastel!</h2>
             <ul>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
