Atualizei onde-comer.html

--- a/onde-comer.html
+++ b/onde-comer.html
@@ -54,6 +54,7 @@
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana</a> (Somente por encomenda!)</li>   
                 <li><a href="https://instagram.com/phasprodutosnaturais?igshid=MzRlODBiNWFlZA==" target="_blank">Phas</a></li>
                 <li><a href="https://instagram.com/nalu_pizzas?igshid=MzRlODBiNWFlZA==" target="_blank">Nalu</a></li>
+                <li><a href="https://instagram.com/ilcapopizza?igshid=MzRlODBiNWFlZA==" target="_blank">Il Capo</a></li>
             </ul>    
         </div>
         <div class="lojas">
